--- a/src/app/login-user/login-user.component.html
+++ b/src/app/login-user/login-user.component.html
@@ -1,1 +1,30 @@
-<p>login-user works!</p>
+<div class="container">
+    <form action="/action_page.php">
+        
+      <div class="row">    
+        <h3 class="log">Log Into Your Account</h3>
+  
+        <div class="col1">
+          <a href="#" class="fb btn">
+            <i class="fa fa-facebook fa-fw"></i> Continue with Facebook
+           </a>
+         
+          <a href="#" class="google btn"><i class="fa fa-google fa-fw">
+            </i> Continue with Google+
+          </a>
+        </div>
+  
+        <div class="col2">
+            
+          <input class="login" type="email" name="username" placeholder="Email" required>
+          <input class="login" type="password" name="password" placeholder="Password" required>
+          <input type="submit" value="Login">
+        </div>
+        <p class="fpwd"><a href="forget-password">Forgot Password?</a></p>
+        <p class="fpwd">Don't have an account? <a href="register"><span class="span">Sign up</span></a></p>
+
+        
+      </div>
+    </form>
+  </div>
+  
