--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,12 +1,16 @@
 
 <section class="container-fluid">
     <div class="card bg-dark text-white">
-      <img src="/assets/images/tile1.svg" class="card-img img-fluid" alt="...">
+      <img src="/assets/images/silde1.jpg" class="card-img img-fluid" alt="...">
       <div class="card-img-overlay">
         <div class="card-bg">
           <div class="card-body">
-            <h1 class="card-title col-sm-6"><a routerLink="/course-content">Light card title</a></h1>
-            <p class="card-text col-sm-6">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <h1 class="card-title col-sm-6"><a routerLink="/course-content">Ace Up</a></h1>
+            <p class="card-text col-sm-6 landing-text">Ace Up provides  all learners the opportunity to become 
+              economically productive, develop sustainable livelihoods and
+              have an edge amongst peers when it comes to formal education.
+              It also provides a suitable platform for everyone to share and 
+              impact knowledge and experiences.</p>
           </div>
         </div>
       </div>
