--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,11 +1,14 @@
 
 <section class="container-fluid">
     <div class="card bg-dark text-white">
-      <img src="/assets/images/silde1.jpg" class="card-img img-fluid" alt="...">
+      <picture class="card-img img-fluid">
+        <source class="desktop-img" media="(min-width:768px)" srcset="/assets/images/silde1.jpg">
+        <img class="mobile-img" src="/assets/images/silde1small.jpg" alt="#">
+      </picture>
       <div class="card-img-overlay">
         <div class="card-bg">
-          <div class="card-body">
-            <h1 class="card-title col-sm-6"><a routerLink="/course-content">Ace Up</a></h1>
+          <div class="card-body landing">
+            <h1 class="card-title col-sm-6 landing-title"><a routerLink="/course-content">Ace Up</a></h1>
             <p class="card-text col-sm-6 landing-text">Ace Up provides  all learners the opportunity to become 
               economically productive, develop sustainable livelihoods and
               have an edge amongst peers when it comes to formal education.
@@ -16,7 +19,6 @@
       </div>
     </div>
   </section>
-  
   
   <!-- Course Section -->
   <section class="container text-center ">
