--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,9 +5,9 @@
         <source class="desktop-img" media="(min-width:768px)" srcset="/assets/images/silde1.jpg">
         <img class="mobile-img" src="/assets/images/silde1small.jpg" alt="#">
       </picture>
-      <div class="card-img-overlay">
-        <div class="card-bg">
-          <div class="card-body landing">
+      <div class="card-img-overlay cio-desktop">
+        <div class="card-bg cbg-desktop">
+          <div class="card-body landing-desktop">
             <h1 class="card-title col-sm-6 landing-title"><a routerLink="/course-content">Ace Up</a></h1>
             <p class="card-text col-sm-6 landing-text">Ace Up provides  all learners the opportunity to become 
               economically productive, develop sustainable livelihoods and
@@ -17,6 +17,20 @@
           </div>
         </div>
       </div>
+
+      <div class="card-img-overlay cio-mob">
+        <div class="card-bg cbg-mob">
+          <div class="card-body landing-mob">
+            <h1 class="card-title col-sm-6 landing-title-mob"><a routerLink="/course-content">Ace Up</a></h1>
+            <p class="card-text col-sm-6 landing-text-mob">Ace Up provides  all learners the opportunity to become 
+              economically productive, develop sustainable livelihoods and
+              have an edge amongst peers when it comes to formal education.
+              It also provides a suitable platform for everyone to share and 
+              impact knowledge and experiences.</p>
+          </div>
+        </div>
+      </div>
+
     </div>
   </section>
   
