--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,52 +1,58 @@
-
 <section class="container-fluid">
-    <div class="card bg-dark text-white">
-      <picture class="card-img img-fluid">
-        <source class="desktop-img" media="(min-width:768px)" srcset="/assets/images/silde1.jpg">
-        <img class="mobile-img" src="/assets/images/silde1small.jpg" alt="#">
-      </picture>
-      <div class="card-img-overlay cio-desktop">
-        <div class="card-bg cbg-desktop">
-          <div class="card-body landing-desktop">
-            <h1 class="card-title col-sm-6 landing-title"><a routerLink="/course-content">Ace Up</a></h1>
-            <p class="card-text col-sm-6 landing-text">Ace Up provides  all learners the opportunity to become 
-              economically productive, develop sustainable livelihoods and
-              have an edge amongst peers when it comes to formal education.
-              It also provides a suitable platform for everyone to share and 
-              impact knowledge and experiences.</p>
-          </div>
+  <div class="card bg-dark text-white">
+    <picture class="card-img img-fluid">
+      <source class="desktop-img" media="(min-width:768px)" srcset="/assets/images/silde1.jpg">
+      <img class="mobile-img" src="/assets/images/silde1small.jpg" alt="#">
+    </picture>
+    <div class="card-img-overlay cio-desktop">
+      <div class="card-bg cbg-desktop">
+        <div class="card-body landing-desktop">
+          <h1 class="card-title col-sm-6 landing-title"><a routerLink="/course-content">Ace Up</a></h1>
+          <p class="card-text col-sm-6 landing-text">Ace Up provides all learners the opportunity to become
+            economically productive, develop sustainable livelihoods and
+            have an edge amongst peers when it comes to formal education.
+            It also provides a suitable platform for everyone to share and
+            impact knowledge and experiences.</p>
         </div>
       </div>
-
-      <div class="card-img-overlay cio-mob">
-        <div class="card-bg cbg-mob">
-          <div class="card-body landing-mob">
-            <h1 class="card-title col-sm-6 landing-title-mob"><a routerLink="/course-content">Ace Up</a></h1>
-            <p class="card-text col-sm-6 landing-text-mob">Ace Up provides  all learners the opportunity to become 
-              economically productive, develop sustainable livelihoods and
-              have an edge amongst peers when it comes to formal education.
-              It also provides a suitable platform for everyone to share and 
-              impact knowledge and experiences.</p>
-          </div>
-        </div>
-      </div>
-
     </div>
-  </section>
-  
-  <!-- Course Section -->
-  <section class="container text-center ">
-    <h2 class="course-category">Formal Courses</h2>
-    <div class="row row-cols-1 row-cols-md-4 g-4">
-      <div class="col">
-        <div class="card h-100 shadows">
-          <img src="/assets/images/Rectangle 111.png" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h4 class="card-title">Mathematics</h4>
-          </div>
-  
+
+    <div class="card-img-overlay cio-mob">
+      <div class="card-bg cbg-mob">
+        <div class="card-body landing-mob">
+          <h1 class="card-title col-sm-6 landing-title-mob"><a routerLink="/course-content">Ace Up</a></h1>
+
         </div>
       </div>
+    </div>
+  </div>
+  <div class="card bg text-white">
+    <div class="card-bg cbg-mob">
+      <div class="card-body landing-mob">
+        <p class="card-text col-sm-6 landing-text-mob">Ace Up provides all learners the opportunity to become
+          economically productive, develop sustainable livelihoods and
+          have an edge amongst peers when it comes to formal education.
+          It also provides a suitable platform for everyone to share and
+          impact knowledge and experiences.</p>
+      </div>
+    </div>
+  </div>
+
+</section>
+
+<!-- Course Section -->
+<section class="container text-center ">
+  <h2 class="course-category">Formal Courses</h2>
+  <div class="row row-cols-1 row-cols-md-4 g-4">
+    <div class="col">
+      <div class="card h-100 shadows">
+        <img src="/assets/images/Rectangle 111.png" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h4 class="card-title">Mathematics</h4>
+        </div>
+
+      </div>
+    </div>
     <div class="col">
       <div class="card h-100 shadows">
         <img src="/assets/images/Rectangle 111 (1).png" class="card-img-top" alt="...">
@@ -73,92 +79,90 @@
     </div>
   </div>
   <h2 class="course-category">Informal Courses</h2>
-    <div class="row row-cols-1 row-cols-md-4 g-4">
-      <div class="col">
-        <div class="card h-100 shadows">
-          <img src="/assets/images/Rectangle 111 (7).png" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h4 class="card-title">Tailoring</h4>
+  <div class="row row-cols-1 row-cols-md-4 g-4">
+    <div class="col">
+      <div class="card h-100 shadows">
+        <img src="/assets/images/Rectangle 111 (7).png" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h4 class="card-title">Tailoring</h4>
+        </div>
+
+      </div>
+    </div>
+    <div class="col">
+      <div class="card h-100 shadows">
+        <img src="/assets/images/Rectangle 111 (6).png" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h4 class="card-title">Baking</h4>
+        </div>
+
+      </div>
+    </div>
+    <div class="col">
+      <div class="card h-100 shadows">
+        <img src="/assets/images/Rectangle 111 (5).png" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h4 class="card-title">Hair Dressing</h4>
+        </div>
+
+      </div>
+    </div>
+    <div class="col">
+      <div class="card h-100 shadows">
+        <img src="/assets/images/Rectangle 111 (4).png" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h4 class="card-title">Shoe Making</h4>
+        </div>
+
+      </div>
+    </div>
+  </div>
+</section>
+
+
+<section class="container-fluid third-section">
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-6">
+        <div class="card">
+          <div class="card-body inst-img">
+            <img class="h-100 w-100" src="/assets/images/Rectangle 31.png" alt="...">
           </div>
-  
         </div>
       </div>
-      <div class="col">
-        <div class="card h-100 shadows">
-          <img src="/assets/images/Rectangle 111 (6).png" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h4 class="card-title">Baking</h4>
+      <div class="col-sm-6 inst-container">
+        <div class="card inst-wrap card-border">
+          <div class="card-body inst-content">
+            <h2 class="card-title">Become an Instructor</h2>
+            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+            <a href="#" class="btn btn-outline-dark" type="button">Register</a>
           </div>
-  
-        </div>
-      </div>
-      <div class="col">
-        <div class="card h-100 shadows">
-          <img src="/assets/images/Rectangle 111 (5).png" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h4 class="card-title">Hair Dressing</h4>
-          </div>
-  
-        </div>
-      </div>
-      <div class="col">
-        <div class="card h-100 shadows">
-          <img src="/assets/images/Rectangle 111 (4).png" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h4 class="card-title">Shoe Making</h4>
-          </div>
-  
         </div>
       </div>
     </div>
-  </section>
-  
-  
-    <section class="container-fluid third-section">
-      <div class="container">
-        <div class="row">
-          <div class="col-sm-6">
-            <div class="card">
-              <div class="card-body inst-img">
-                <img class="h-100 w-100" src="/assets/images/Rectangle 31.png" alt="...">
-              </div>
-            </div>
-          </div>
-          <div class="col-sm-6 inst-container" >
-            <div class="card inst-wrap card-border">
-              <div class="card-body inst-content">
-                <h2 class="card-title">Become an Instructor</h2>
-                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                <a href="#" class="btn btn-outline-dark" type="button">Register</a>
-              </div>
-            </div>
-          </div>
+  </div>
+</section>
+
+<section class="container-fluid text-center">
+  <div class="container">
+    <h2 class="course-category">Trusted By</h2>
+
+    <div class="row row-cols-1 row-cols-md-3 g-4">
+      <div class="cols-1">
+        <div class="card-border">
+          <img src="/assets/images/itf.jpg" class="card-img-top logo logo-first" alt="...">
         </div>
       </div>
-    </section>
-  
-    <section class="container-fluid text-center">
-      <div class="container">
-        <h2 class="course-category">Trusted By</h2>
-      
-        <div class="row row-cols-1 row-cols-md-3 g-4">
-          <div class="cols-1">
-            <div class="card-border">
-              <img src="/assets/images/itf.jpg" class="card-img-top logo logo-first" alt="...">
-            </div>
-          </div>
-          <div class="cols-2">
-            <div class="card-border">
-              <img src="/assets/images/mentors.jpg" class="card-img-top logo logo-second" alt="...">
-            </div>
-          </div>
-          <div class="cols-3">
-            <div class="card-border">
-              <img src="/assets/images/neca.jpg" class="card-img-top logo logo-third" alt="...">
-            </div>
-          </div>
+      <div class="cols-2">
+        <div class="card-border">
+          <img src="/assets/images/mentors.jpg" class="card-img-top logo logo-second" alt="...">
         </div>
       </div>
-    </section>
-    
-  
+      <div class="cols-3">
+        <div class="card-border">
+          <img src="/assets/images/neca.jpg" class="card-img-top logo logo-third" alt="...">
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
