updating user profile

--- a/src/app/user-profile/user-profile.component.html
+++ b/src/app/user-profile/user-profile.component.html
@@ -1,5 +1,5 @@
 <div class="containter-fluid">
-    <div class="dot"></div>
+    <div class="dot"><img src="../../assets/images/Ellipsse 85.png" alt=""></div>
     <div class="heading">  
       <h3>Welcome back Famah Kwandi</h3>
       <h5>Mathematics</h5>
