--- a/src/app/particular-course/particular-course.component.html
+++ b/src/app/particular-course/particular-course.component.html
@@ -1,1 +1,22 @@
 <p>particular-course works!</p>
+<div class="first">
+  Welcome Back Super Admin
+        Musa Umar
+</div>
+
+
+    <div class="container">
+        <h2>Filter Notification</h2>
+        <h2>173 New Posts         View
+        </h2>
+    </div>
+
+
+  
+<div class="wrapper">
+<div>
+    manager Posts
+</div>
+<div>Manager user</div>
+<div>manager instrctors</div>
+</div>
