adding navebar routing component

--- a/src/app/course-content/course-content.component.html
+++ b/src/app/course-content/course-content.component.html
@@ -16,6 +16,9 @@
         <video src="" poster="/assets/images/thumbnailmath.png"></video>
       </div>
     </section>
+    <section>
+      <a href="#" class="btn btn-outline-dark" type="button">Back to profile</a>
+    </section>
   </section>
   
   
