adding instructors profile

--- a/src/app/instructor-profile/instructor-profile.component.html
+++ b/src/app/instructor-profile/instructor-profile.component.html
@@ -1,1 +1,23 @@
-<p>instructor-profile works!</p>
+<div class="container-fluid">
+  <div class="column">
+        <div class="dot"><img src="../../assets/images/Ellipse 84.png" alt=""></div>
+        <h4 class="list"><a href="">Edit Profile</a></h4>
+        <h4 class="list"><a href="">Uploads History</a></h4>
+        <h4 class="list"><a href="">Recent Uploads</a></h4>
+        <h4 class="list"><a href="">Followers</a></h4>
+        <h4 class="list"><a href="">New Upload</a></h4>
+  </div>
+  <div class="column">
+        <div class="instructor">
+            <h2>Mr Mustapha M.</h2> 
+            <div class="instrucdiv">Instructor</div>
+        </div>
+        <div class="contact">
+          <h5><a href="">mustapha@yahoo.com</a></h5> 
+          <div class="address"><i class="fa fa-map-marker" aria-hidden="true"></i> Yola North</div>
+        </div>
+    
+       
+        <p class="text"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo unde ratione iure nihil et cupiditate, beatae commodi voluptatibus facere repellendus sed, eum, aspernatur ipsum! Blanditiis saepe numquam doloremque perferendis rem nulla accusantium exercitationem repellendus nobis harum! Mollitia illo placeat perferendis accusantium beatae fugiat? Aliquid mollitia repellendus corporis recusandae! Tenetur beatae asperiores numquam ipsa possimus inventore expedita accusantium tempore voluptatibus similique. Rerum dolores officiis, voluptatum cum eos, ab reprehenderit vero adipisci, consectetur excepturi fugiat nulla soluta ad. Minima est adipisci iste!</p>
+  </div>
+</div>
