--- a/src/app/reset-password/reset-password.component.css
+++ b/src/app/reset-password/reset-password.component.css
@@ -13,3 +13,14 @@ h4 {
   font-size: 1.2rem;
   margin: 3rem 0 1.5rem 0;
 }
+.form-control {
+  border: 1px solid #000;
+  border-radius: 0;
+}
+
+.btn {
+  border-radius: 0;
+  width: 80%;
+  margin-left: 1.7rem;
+  background:  #160D38;
+}
