--- a/src/app/course-content/course-content.component.html
+++ b/src/app/course-content/course-content.component.html
@@ -17,7 +17,7 @@
       </div>
     </section>
     <section>
-      <a href="#" class="btn btn-outline-dark" type="button">Back to profile</a>
+      <a routerLink="/user-profile" href="#" class="btn btn-outline-dark" type="button">Back to profile</a>
     </section>
   </section>
   
