--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -4,7 +4,7 @@
       <h4>Unveil Arewa</h4>
     </div>
       <div class="dropdown">
-        <div class="bisque-tinyline"></div>
+      
         <button class="dropbtn">English
           <i class="fa fa-caret-down"></i>
         </button>
@@ -14,25 +14,20 @@
             <a href="#">Lunguda</a>
           </div>
       </div>
-      <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>  -->
-  
-     <!-- <hr class="rule"> -->
      
       <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
           <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
             <li class="nav-item">
               <!-- <div class="bisque-tinyline"></div> -->
-              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+              <a routerLink="/" class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
               <!-- <div class="bisque-tinyline"></div> -->
-              <a class="nav-link" href="#">Register</a>
+              <a routerLink="/register-user" class="nav-link" href="#">Register</a>
             </li>
             <li class="nav-item">
               <!-- <div class="bisque-tinyline"></div> -->
-              <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Login</a>
+              <a routerLink="/login-user" class="nav-link" href="#" tabindex="-1" aria-disabled="true">Login</a>
             </li>
           </ul>
         </div> 
