--- a/src/app/register-user/register-user.component.html
+++ b/src/app/register-user/register-user.component.html
@@ -41,9 +41,9 @@
     <div class="form-check">
       <input class="form-check-input" type="checkbox" id="gridCheck1">
     </div>
-    <button type="button" class="btn btn-primary btn-lg">Sign Up</button>
+    <a routerLink="/login-user" href="#"><button type="button" class="btn btn-primary btn-lg">Sign Up</button></a>
     <p class="signup">By siging up, you agree to our Terms of Use and Privacy Policy.</p>
     <p class="border"></p>
-    <p class="login">Already have an account?<a href="" class="acclogin">Log In</a></p>
+    <p class="login">Already have an account?<a routerLink="/user-profile" href="" class="acclogin">Log In</a></p>
   </form>
    
