--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,7 +7,7 @@
     <div class="card-img-overlay cio-desktop">
       <div class="card-bg cbg-desktop">
         <div class="card-body landing-desktop">
-          <h1 class="card-title col-sm-6 landing-title"><a routerLink="/course-content">Ace Up</a></h1>
+          <h1 class="card-title col-sm-6 landing-title"><a>Ace Up</a></h1>
           <p class="card-text col-sm-6 landing-text">Ace Up provides all learners the opportunity to become
             economically productive, develop sustainable livelihoods and
             have an edge amongst peers when it comes to formal education.
@@ -20,8 +20,7 @@
     <div class="card-img-overlay cio-mob">
       <div class="card-bg cbg-mob">
         <div class="card-body landing-mob">
-          <h1 class="card-title col-sm-6 landing-title-mob"><a routerLink="/course-content">Ace Up</a></h1>
-
+          <h1 class="card-title col-sm-6 landing-title-mob"><a>Ace Up</a></h1>
         </div>
       </div>
     </div>
@@ -42,20 +41,21 @@
 
 <!-- Course Section -->
 <section class="container text-center ">
+  
   <h2 class="course-category">Formal Courses</h2>
   <div class="row row-cols-1 row-cols-md-4 g-4">
     <div class="col">
       <div class="card h-100 shadows">
-        <img src="/assets/images/Rectangle 111.png" class="card-img-top" alt="...">
+        <a routerLink="/course-content"><img src="/assets/images/Rectangle 111.png" class="card-img-top" alt="..."></a>
         <div class="card-body">
-          <h4 class="card-title">Mathematics</h4>
+          <a routerLink="/course-content"><h4 class="card-title">Mathematics</h4></a>
         </div>
-
       </div>
     </div>
+
     <div class="col">
       <div class="card h-100 shadows">
-        <img src="/assets/images/Rectangle 111 (1).png" class="card-img-top" alt="...">
+        <a routerLink="/course-content"><img src="/assets/images/Rectangle 111 (1).png" class="card-img-top" alt="..."></a>
         <div class="card-body">
           <h4 class="card-title">English</h4>
         </div>
@@ -135,7 +135,7 @@
           <div class="card-body inst-content">
             <h2 class="card-title">Become an Instructor</h2>
             <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-            <a href="#" class="btn btn-outline-dark" type="button">Register</a>
+            <a routerLink="/register-user" href="#" class="btn btn-outline-dark" type="button">Register</a>
           </div>
         </div>
       </div>
