--- a/src/app/reset-password/reset-password.component.css
+++ b/src/app/reset-password/reset-password.component.css
@@ -2,6 +2,8 @@
   width: 50%;
 }
 h2 {
+  padding-left: 1rem;
+  width: 120%;
   font-weight: 600;
   font-size: 2rem;
   margin: 3rem 0 1.5rem 0;
@@ -23,4 +25,24 @@ h4 {
   width: 80%;
   margin-left: 1.7rem;
   background:  #160D38;
+}
+
+@media (min-width: 992px) {
+  .btn {
+    margin-left: 4rem;
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  .container {
+    width: 40%;
+  }
+
+  .btn {
+    margin-left: 3.5rem;
+  }
+
+  h2 {
+    padding-left: 5rem;
+  }
 }
