--- a/src/app/reset-password/reset-password.component.html
+++ b/src/app/reset-password/reset-password.component.html
@@ -19,6 +19,6 @@
       <input type="password" class="form-control" placeholder="Confirm password" id="pwd">
     </div>
   </form>
-  <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+  <a class="btn btn-primary btn-lg" href="#" role="button">Reset Password</a>
 
 </section>
