--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,6 +1,6 @@
 <footer>
-    <div class="jumbotron jumbotron-fluid">
-        <div class="container-fluid">
+    <div class="container-fluid">
+        <div class="container">
             <a class="logo"><img src="assets/images/logo.png" alt=""></a>
         <div class="footer">
             <div class="fota1">
