--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,66 +1,61 @@
-<nav class="topnav navbar navbar-expand-lg">
-  <div class=" logo-brandname">
-    <a class="logo"><img src="assets/images/logo.png" alt=""></a> 
-    <h4>Unveil Arewa</h4>
-  </div>
-    <div class="dropdown">
-      <div class="bisque-tinyline"></div>
-      <button class="dropbtn">English
-        <i class="fa fa-caret-down"></i>
-      </button>
-       <div class="dropdown-content">
-          <a href="#">Hausa</a>
-          <a href="#">fulani</a>
-          <a href="#">Lunguda</a>
-        </div>
-    </div> 
-     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button> 
-
-   <!-- <hr class="rule"> -->  
-    <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
-        <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-          <li class="nav-item"> 
-            <!-- <div class="bisque-tinyline"></div> -->
-           <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-          </li>
-
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
-              Rigester
-            </a>
-            <div class="dropdown-content">
-              <a class="dropdown-item" href="#">Rigester as Instructor</a>
-              <a class="dropdown-item" href="#">Rigester as User</a>
-            </div>
-          </li>
-          <!-- <li class="nav-item"> 
-            <!- <div class="bisque-tinyline"></div> -->
-            <!-- <a class="nav-link" href="#">Register</a>
-          </li> --> 
-          <!-- <li class="nav-item"> 
-            <!- <div class="bisque-tinyline"></div> -->
-             <!-- <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Login</a>
-          </li> --> 
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
-              Login
-            </a>
-            <div class="dropdown-content">
-              <a class="dropdown-item" href="#">Login as Instructor</a>
-              <a class="dropdown-item" href="#">Login as User</a>
-            </div>
-          </li>
-        </ul>
+<div class="nav">
+  <nav class="topnav navbar navbar-expand-lg">
+    <div class=" logo-brandname">
+      <a class="logo"><img src="assets/images/logo.png" alt=""></a> 
+      <h4>Unveil Arewa</h4>
+    </div>
+      <div class="dropdown">
+        <div class="bisque-tinyline"></div>
+        <button class="dropbtn">English
+          <i class="fa fa-caret-down"></i>
+        </button>
+         <div class="dropdown-content">
+            <a href="#">Hausa</a>
+            <a href="#">fulani</a>
+            <a href="#">Lunguda</a>
+          </div>
       </div> 
-     
-      <form class="form-inline my-2 my-lg-0">
-        <input class="form-control mr-sm-2" type="search" placeholder="Search">
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit"><svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-search" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-          <path fill-rule="evenodd" d="M10.442 10.442a1 1 0 0 1 1.415 0l3.85 3.85a1 1 0 0 1-1.414 1.415l-3.85-3.85a1 1 0 0 1 0-1.415z"/>
-          <path fill-rule="evenodd" d="M6.5 12a5.5 5.5 0 1 0 0-11 5.5 5.5 0 0 0 0 11zM13 6.5a6.5 6.5 0 1 1-13 0 6.5 6.5 0 0 1 13 0z"/>
-          </svg>
-       </button>
-      </form>
-  </nav> 
+       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button> 
+  
+     <!-- <hr class="rule"> -->  
+      <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
+          <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+            <li class="nav-item"> 
+              <!-- <div class="bisque-tinyline"></div> -->
+             <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            </li>
+  
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
+                Rigester
+              </a>
+              <div class="dropdown-content">
+                <a class="dropdown-item" href="#">Rigester as Instructor</a>
+                <a class="dropdown-item" href="#">Rigester as User</a>
+              </div>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
+                Login
+              </a>
+              <div class="dropdown-content">
+                <a class="dropdown-item" href="#">Login as Instructor</a>
+                <a class="dropdown-item" href="#">Login as User</a>
+              </div>
+            </li>
+          </ul>
+        </div> 
+       
+        <form class="form-inline my-2 my-lg-0">
+          <input class="form-control mr-sm-2" type="search" placeholder="Search">
+          <button class="btn btn-outline-success my-2 my-sm-0" type="submit"><svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-search" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+            <path fill-rule="evenodd" d="M10.442 10.442a1 1 0 0 1 1.415 0l3.85 3.85a1 1 0 0 1-1.414 1.415l-3.85-3.85a1 1 0 0 1 0-1.415z"/>
+            <path fill-rule="evenodd" d="M6.5 12a5.5 5.5 0 1 0 0-11 5.5 5.5 0 0 0 0 11zM13 6.5a6.5 6.5 0 1 1-13 0 6.5 6.5 0 0 1 13 0z"/>
+            </svg>
+         </button>
+        </form>
+    </nav> 
+  
+</div>
