--- a/src/app/instructor-profile/instructor-profile.component.html
+++ b/src/app/instructor-profile/instructor-profile.component.html
@@ -8,9 +8,9 @@
         <h4 class="list"><a href="">New Upload</a></h4>
   </div>
   <div class="column">
-        <div class="instructor">
+        <div class="container">
             <h2>Mr Mustapha M.</h2> 
-            <div class="instrucdiv">Instructor</div>
+            <div class="container-box">Instructor</div>
         </div>
         <div class="contact">
           <h5><a href="">mustapha@yahoo.com</a></h5> 
