--- a/src/app/instructor-profile/instructor-profile.component.css
+++ b/src/app/instructor-profile/instructor-profile.component.css
@@ -32,11 +32,11 @@
     text-decoration: none;
 }
 
-.instructor {
+.container {
     display: flex;
 }
 
-.instrucdiv {
+.container-box {
     border: 1px solid black;
     background-color: #160D38;
     font-size: 24px;
