--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,7 +7,7 @@
     <div class="card-img-overlay cio-desktop">
       <div class="card-bg cbg-desktop">
         <div class="card-body landing-desktop">
-          <h1 class="card-title col-sm-6 landing-title"><a>Ace Up</a></h1>
+          <h1 class="card-title col-sm-6 landing-title"><a>Unveil</a></h1>
           <p class="card-text col-sm-6 landing-text">Ace Up provides all learners the opportunity to become
             economically productive, develop sustainable livelihoods and
             have an edge amongst peers when it comes to formal education.
@@ -20,7 +20,7 @@
     <div class="card-img-overlay cio-mob">
       <div class="card-bg cbg-mob">
         <div class="card-body landing-mob">
-          <h1 class="card-title col-sm-6 landing-title-mob"><a>Ace Up</a></h1>
+          <h1 class="card-title col-sm-6 landing-title-mob"><a>Unveil</a></h1>
         </div>
       </div>
     </div>
