--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -97,7 +97,9 @@ width: 100%;
 
 /* Medium devices (tablets, 768px and up) */
 @media only screen and (min-width: 768px) {
-  
+  .desktop-img {
+    width: 50%;
+  }
   .cio-mob {
   display: none;
 }
