--- a/src/app/particular-course/particular-course.component.html
+++ b/src/app/particular-course/particular-course.component.html
@@ -1,22 +1,58 @@
-<p>particular-course works!</p>
-<div class="first">
-  Welcome Back Super Admin
-        Musa Umar
+<div class="housing">
+<div class="first"> Designemy   ----   Formal Course ----   Mathematics</div>
+
+<div class="second">
+<h2>Mathematics</h2>
+
+<h3>Syllables</h3> 
 </div>
 
 
-    <div class="container">
-        <h2>Filter Notification</h2>
-        <h2>173 New Posts         View
-        </h2>
+<div class="container">
+    <div>
+    <img src="./assets/images/Rectangle 5.jpg" alt="">
+        <h2 class="cold"> Fractions</h2>
+        </div>
+        <div>
+    <img src="./assets/images/Rectangle 2.jpg" alt="">
+         <h2 class="cold"> Trignonometry</h2>
+         </div>
+         <div>
+    <img src="./assets/images/Rectangle 3.png" alt="">
+         <h2 class="cold"> Statistics</h2>
+         </div>
+         <div>
+    <img src="./assets/images/Rectangle 4.jpg" alt="">
+        <h2 class="cold"> Logic </h2>
+        </div>
+        <div>
+    <img src="./assets/images/Rectangle 111.jpg" alt="">
+         <h2 class="cold">Algebra</h2>
+         </div>
+         <div>
+    <img src="./assets/images/Rectangle 6.jpg" alt="">
+          <h2 class="cold">  Calculus </h2>
+          </div>
+</div>
+</div>
+
+<section class="imageText">
+    <h2 class="third">Course Review</h2>
+
+    <div class="wrappa">
+        <img src="./assets/images/Ellipsse 85.png" alt="">
+       <p class="text">Dempfa business school gave me an invaluable depth of knowledge in global business and the roles each department ploys within an organisation <br> Faith Kwandi Demfa graduate
+        </p> 
     </div>
+    
+    <div class="Uwrap">
+        <img src="./assets/images/Ellipse 84.png" alt="">
+        <p class="text2">
+            The skills learnt at Demfo opened up doors for me globally, and were a factor in the success of me me achieving my dream job. i'd recommend it to anyone looking to improve their business skills".<br> Auwal molinto Demfa gradute
+        </p>
+    </div>
+</section>
 
+ 
+ 
 
-  
-<div class="wrapper">
-<div>
-    manager Posts
-</div>
-<div>Manager user</div>
-<div>manager instrctors</div>
-</div>
