--- a/src/app/super-admin/super-admin.component.html
+++ b/src/app/super-admin/super-admin.component.html
@@ -1,1 +1,20 @@
-<p>super-admin works!</p>
+<div class="first">
+    <img class="pig" src="./assets/images/Group 112.jpg" alt="">
+    <h3> Welcome Back Super Admin <br>
+        Musa Umar
+    </h3>
+ </div>
+  
+<div class="container">
+    <h2 class="prim" >Filter Notification</h2>
+    <h2 class="rime">173 New Posts View
+    </h2>
+</div>
+    
+  <div class="wrapper">
+  <div class="post">
+     <p>manager Posts</p> 
+  </div>
+  <div class="m-user"><p>Manager user</p> </div>
+  <div class="m-instructor"><p>manager instructors</p> </div>
+  </div>
