--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -8,7 +8,7 @@
       <div class="card-bg cbg-desktop">
         <div class="card-body landing-desktop">
           <h1 class="card-title col-sm-6 landing-title"><a>Unveil</a></h1>
-          <p class="card-text col-sm-6 landing-text">Ace Up provides all learners the opportunity to become
+          <p class="card-text col-sm-6 landing-text">AUnveil provides all learners the opportunity to become
             economically productive, develop sustainable livelihoods and
             have an edge amongst peers when it comes to formal education.
             It also provides a suitable platform for everyone to share and
