--- a/src/app/course-content/course-content.component.css
+++ b/src/app/course-content/course-content.component.css
@@ -1,10 +1,18 @@
 .content {
-  display: flex;
+  flex: 0 0 25%;
+  max-width: 75%;
 }
 
 video {
   width: 115%;
   height: 50%;
+}
+
+.btn {
+  margin: 2rem;
+  background: #160D38;
+  border-radius: 0px;
+  width: 25%;
 }
 
 @media only screen and (max-width: 768px) {
@@ -13,3 +21,4 @@ video {
     height: 100%;
   }
 }
+
