--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,7 +1,7 @@
 <footer>
     <div class="container-fluid">
         <div class="container">
-            <a class="logo"><img src="assets/images/logo.png" alt=""></a>
+            <a class="logo" routerLink="/home"><img src="assets/images/logo.png" alt=""></a>
         <div class="footer">
             <div class="fota1">
                 <h4 class="design-font-size">DESIGNEMY</h4>
