--- a/src/app/register-user/register-user.component.html
+++ b/src/app/register-user/register-user.component.html
@@ -23,7 +23,7 @@
           receiving emails with exclusive deals, personal
           recommendations and learning tips!</span>
         
-        <input type="submit" value="Sign Up">
+        <a href="#" routerLink="/login-user"><input type="submit" value="Sign Up"></a>
       </div>
       <p class="fpwd">Already have an account? <a href="login"><span class="span">Login</span></a></p>
 
