--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -1,10 +1,14 @@
 .container-fluid{
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
     margin-top: 20rem;
     background-color: #160d38;
     color: white;
-    padding: 2%;
+    padding: 2%; 
+}
+
+.container {
+    max-width: 1300px;
+    width: 94%;
+    margin: 0 auto;
 }
 
 .copyright {
@@ -12,8 +16,9 @@
 }
 
 .logo {
-margin-left: 2rem;
+width: 60px;
 }
+
 
 .grid {
     display: grid;
@@ -22,13 +27,13 @@ margin-left: 2rem;
 .follow {
     font-size: 12px;
     border-left:2px solid bisque ;
+    padding-left: 1rem;
     height: 40px;
 }
 
 .address{
-    float: left;
     font-size: 11px;   
-}
+} 
 
 .footer{
     display: grid;
@@ -36,7 +41,10 @@ margin-left: 2rem;
     grid-template-columns: repeat(3, 1fr);
 }
 
-.fota {
-    margin-left: 25rem;
+.fota2 {
+    display: grid;
+    grid-gap:1rem;
+    grid-template-columns: repeat(5, 1fr);
+    border-right:2px solid bisque ;
+    height: 40px;  
 }
-
