--- a/src/app/super-admin/super-admin.component.html
+++ b/src/app/super-admin/super-admin.component.html
@@ -7,14 +7,15 @@
   
 <div class="container">
     <h2 class="prim" >Filter Notification</h2>
-    <h2 class="rime">173 New Posts View
+    <h2 class="rime">173 New Posts <h2 class="see">View</h2>
     </h2>
+    
 </div>
     
   <div class="wrapper">
   <div class="post">
-     <p>manager Posts</p> 
+     <h4>Manager Posts</h4> 
   </div>
-  <div class="m-user"><p>Manager user</p> </div>
-  <div class="m-instructor"><p>manager instructors</p> </div>
+  <div class="m-user"><h4>Manager user</h4> </div>
+  <div class="m-instructor"><h4>Manager instructors</h4> </div>
   </div>
