--- a/src/app/super-admin/super-admin.component.html
+++ b/src/app/super-admin/super-admin.component.html
@@ -1,21 +1,18 @@
-<div class="first">
-    <img class="pig" src="./assets/images/Group 112.jpg" alt="">
-    <h3> Welcome Back Super Admin <br>
-        Musa Umar
-    </h3>
- </div>
-  
+
 <div class="container">
-    <h2 class="prim" >Filter Notification</h2>
-    <h2 class="rime">173 New Posts <h2 class="see">View</h2>
-    </h2>
-    
+  <div class="first">
+    <img class="top-icon" src="./assets/images/Group 112.jpg" alt="">
+    <h3> Welcome Back Super Admin <br>Musa Umar</h3>
+  </div>
+      
+  <div class="wrap-noti-text">
+    <h2 class="bg" >Filter Notification</h2>
+    <h2 class="bg bg-buttom">173 New Posts</h2>
+  </div>
+
+  <div class="buttons">
+    <button type="button" class="btn btn-outline-dark btn-sm">Manage Posts</button>
+    <button type="button" class="btn btn-outline-dark btn-sm">Manage User</button>
+    <button type="button" class="btn btn-outline-dark btn-sm btn-3">Manage Instructors</button>
+  </div>
 </div>
-    
-  <div class="wrapper">
-  <div class="post">
-     <h4>Manager Posts</h4> 
-  </div>
-  <div class="m-user"><h4>Manager user</h4> </div>
-  <div class="m-instructor"><h4>Manager instructors</h4> </div>
-  </div>
