--- a/src/app/super-admin/super-admin.component.html
+++ b/src/app/super-admin/super-admin.component.html
@@ -1,6 +1,6 @@
 
 <div class="container">
-  <div class="first">
+  <div class="icon-text-wrap">
     <img class="top-icon" src="./assets/images/Group 112.jpg" alt="">
     <h3> Welcome Back Super Admin <br>Musa Umar</h3>
   </div>
