--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -7,8 +7,8 @@
             
         <div class="footer">
             <div class="fota1">
-                <p class="copyright">copyright c 2019 designemy <br>
-                    Terms of use Privacy Policy
+                <p class="copyright">Copyright &copy;2020 <br>
+                    Terms of Use Privacy Policy
                </p>
             </div>
             <div class="fota2">
@@ -21,7 +21,7 @@
             <div class="fota">
                 <p class="address">Gimba road Jimeta Yola, ADAMAWA<br>
                 +234957804021<br>
-                 designemytop@yahoo.com</p>
+                 unveil@gmail.com</p>
             </div>
         </div>
             
