--- a/src/app/particular-course/particular-course.component.html
+++ b/src/app/particular-course/particular-course.component.html
@@ -8,11 +8,10 @@
 </div>
 
 
-<div class="container">
-    <div>
-    <img src="./assets/images/Rectangle 5.jpg" alt="">
-        <h2 class="cold"> Fractions</h2>
-        </div>
+<div class="container"> <div>
+  <img src="./assets/images/Rectangle 5.jpg" alt="">
+    <h2 class="cold"> Fractions</h2>
+     </div>
         <div>
     <img src="./assets/images/Rectangle 2.jpg" alt="">
          <h2 class="cold"> Trignonometry</h2>
