--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -69,28 +69,26 @@ align-items: center;
   display: none;
   position: absolute;
   background-color: #f9f9f9;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
 }
 
 .dropdown-content a {
-  float: none;
+  /* float: none; */
   color: black;
   padding: 12px 16px;
   text-decoration: none;
   display: block;
   text-align: left;
+  font-size: 0.8rem;
 }
 
-.topnav a:hover, .dropdown:hover .dropbtn {
-  background-color: #555;
-  color: white;
+.d-flex {
+  width: 31%;
+  float: right;
 }
 
 .dropdown-content a:hover {
   background-color: #ddd;
-  color: black;
 }
 
 .dropdown:hover .dropdown-content {
