--- a/src/app/particular-course/particular-course.component.css
+++ b/src/app/particular-course/particular-course.component.css
@@ -1,71 +1,61 @@
-.first{
-    display:grid;
-    grid-template-columns: repeat(3,1fr);
-    padding: 50px;
+.container-fluid {
+  background: #e9ecef;
+}
+.breadcrumb {
+  background: transparent;
+  padding: 0;
+}
+.shadows {
+	box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.3);
 }
 
-.container{
-    display: grid;
-    grid-gap: 8rem;
-    grid-template-columns: repeat(3, 2fr);
-    /* -template-rows: repeat(3, 2frgrid); */
-    padding-top: 10%;
-    padding-bottom: 10%;
-    margin-left: 2mkrem;
-    
+.shadows:hover {
+	box-shadow: 0px 0px 5px 0px rgba(0,0,0,.8);
 }
 
-.housing{
-    background-color:#ddd ;
+.course {
+  margin-top: 7rem;
+  text-align: left;
 }
 
-.cold{
-    background-color: white;
-    width: 90%;
+.course p {
+  margin-bottom: 0;
 }
 
-.imageText {
-    margin: 0 5rem;
+.row-one {
+  margin-top: 5rem;
 }
 
-.wrappa{
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    margin: 0 0 0 3rem;
+.row-two {
+  margin-top: 6rem;
+  padding-bottom: 5rem;  
 }
 
-.text {
-    padding: 0 20rem 0 .8rem;
+.review-wrap {
+  background: #fff;
 }
 
-.Uwrap {
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    margin: 2rem 0 0 3rem; 
+.review h5{
+  font-weight: 600;
+  margin-top: 2rem;
 }
 
-.text2 {
-    padding: 0 20rem 0 .8rem;
+.comment {
+  margin-top: 3rem;
+  display: inline-flex;
+  gap: 1rem;
 }
 
-.para{
-    text-align: center;
-    margin-left: 50px;
-    padding: 2rem;
+.comment img {
+  height: 2%;
 }
 
-.second{
-    padding-top: 100px;
-    margin-left: 15rem;
-    padding-bottom: 2px;
+.user-comment {
+  font-style: italic;
+  margin-left: 4.75rem;
+  opacity: 0.4;
 }
 
-.third{
-    padding-bottom: 5rem;
-    padding-top:2rem ;
-
+span {
+  font-weight: 700;
 }
-
-
