--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -9,7 +9,7 @@
   </div>
 </section>
 
-<section>
+<section class="container-fluid">
   <div class="row">
     <div class="col cards">
       <div class="card-body">
@@ -77,37 +77,37 @@
 </section>
 
 <section class="section-5">
-  <div class="row">
-    <div class="col">
+  <div class="row row-cols-1 row-cols-md-3 g-4">
+    <div class="col talk">
       <h3>Talk with us</h3>
       <p>We are here to respond</p>
       <p>+234-00-000-000-00</p>
       <p>unveilinfo@gmail.com</p>
     </div>
-    <div class="col">
-      <div class="input-group input-group-sm mb-3">
+    <div class="col form">
+      <div class="input-group input-group-sm mb-4">
         <span class="input-group-text" id="inputGroup-sizing-sm">First Name</span>
-        <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-sm">
+        <input type="text" class="form-control" aria-label="" aria-describedby="inputGroup-sizing-sm">
       </div>
-      <div class="input-group input-group-sm mb-3">
+      <div class="input-group input-group-sm mb-4">
         <span class="input-group-text" id="inputGroup-sizing-sm">Last Name</span>
-        <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-sm">
+        <input type="text" class="form-control" aria-label="" aria-describedby="inputGroup-sizing-sm">
       </div>
-      <div class="input-group input-group-sm mb-3">
+      <div class="input-group input-group-sm mb-4">
         <span class="input-group-text" id="inputGroup-sizing-sm">Email Address</span>
-        <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-sm">
+        <input type="email" class="form-control" aria-label="" aria-describedby="inputGroup-sizing-sm">
       </div>
-      <div class="input-group input-group-sm mb-3">
+      <div class="input-group input-group-sm mb-4">
         <span class="input-group-text" id="inputGroup-sizing-sm">Job Title</span>
-        <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-sm">
+        <input type="text" class="form-control" aria-label="" aria-describedby="inputGroup-sizing-sm">
       </div>
-      <div class="input-group input-group-sm mb-3">
+      <div class="input-group input-group-sm mb-4">
         <span class="input-group-text" id="inputGroup-sizing-sm">Phone Number</span>
-        <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-sm">
+        <input type="text" class="form-control" aria-label="" aria-describedby="inputGroup-sizing-sm">
       </div>
-      <div class="input-group input-group-sm mb-3">
+      <div class="input-group input-group-sm mb-4">
         <span class="input-group-text" id="inputGroup-sizing-sm">Comment</span>
-        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+        <textarea class="form-control" id="exampleFormControlTextarea1" rows="1"></textarea>
       </div>
     </div>
   </div>
